--- a/app/index.haml
+++ b/app/index.haml
@@ -4,7 +4,8 @@
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
     %meta{:content => "width=device-width, initial-scale=1, maximum-scale=1", :name => "viewport"}
       %title EasyWeather
-      %link{:href => "http://cloud.keepiteasy.net/css/fluid.css", :media => "screen", :rel => "stylesheet", :type => "text/css"}/
+      %link{:href => "//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css", :rel => "stylesheet"}
+      %link{:href => "assets/css/fluid.css", :media => "screen", :rel => "stylesheet", :type => "text/css"}/
       %script{:src => "http://cloud.keepiteasy.net/libs/modernizr.custom.89661.js", :type => "text/javascript"}
       %script{:src => "http://cloud.keepiteasy.net/libs/json2.js", :type => "text/javascript"}
       %script{:src => "http://cloud.keepiteasy.net/libs/jquery.js", :type => "text/javascript"}
@@ -27,7 +28,7 @@
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', 'UA-33924145-1']);
         _gaq.push(['_trackPageview']);
-        
+
         (function() {
           var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
           ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
