--- a/app/index.haml
+++ b/app/index.haml
@@ -4,14 +4,14 @@
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
     %meta{:content => "width=device-width, initial-scale=1, maximum-scale=1", :name => "viewport"}
       %title EasyWeather
-      %link{:href => "//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css", :rel => "stylesheet"}
-      %link{:href => "assets/css/fluid.css", :media => "screen", :rel => "stylesheet", :type => "text/css"}/
+      %link{:href => "assets/css/font-awesome.css", :rel => "stylesheet"}
+      %link{:href => "assets/css/fluid.css", :media => "screen", :rel => "stylesheet", :type => "text/css"}
       %script{:src => "http://cloud.keepiteasy.net/libs/modernizr.custom.89661.js", :type => "text/javascript"}
       %script{:src => "http://cloud.keepiteasy.net/libs/json2.js", :type => "text/javascript"}
       %script{:src => "http://cloud.keepiteasy.net/libs/jquery.js", :type => "text/javascript"}
-      %script{:src => "https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=weather", :type => "text/javascript"}
       %script{:src => "http://cloud.keepiteasy.net/libs/underscore-min.js", :type => "text/javascript"}
       %script{:src => "http://cloud.keepiteasy.net/libs/backbone-min.js", :type => "text/javascript"}
+      %script{:src => "https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=weather", :type => "text/javascript"}
       %script{:src => "assets/js/init.js", :type => "text/javascript"}
       %script{:src => "assets/js/router.js", :type => "text/javascript"}
       %script{:src => "assets/js/models/app.js", :type => "text/javascript"}
