moving all external assets to our [CDN](cloud.keepiteasy.net) adding a package.json adding a favicon dropping JSONP now that we have CORS working

--- a/app/assets/css/style.scss
+++ b/app/assets/css/style.scss
@@ -2,7 +2,7 @@
   font-family: 'Bevan';
   font-style: normal;
   font-weight: 400;
-  src: local("Bevan"), url(http://cloud.keepiteasy.net/fonts/Bevan.woff) format("woff");
+  src: local("Bevan"), url(http://cloud.keepiteasy.net/easy-weather/fonts/Bevan.woff) format("woff");
 }
 
 
@@ -10,7 +10,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
-  src: local("OpenSans"), local("OpenSans"), url(http://cloud.keepiteasy.net/fonts/OpenSans.woff) format("woff");
+  src: local("OpenSans"), local("OpenSans"), url(http://cloud.keepiteasy.net/easy-weather/fonts/OpenSans.woff) format("woff");
 }
 
 
