updating urls for images and forkme banner

--- a/app/assets/tpl/forecastDay.haml
+++ b/app/assets/tpl/forecastDay.haml
@@ -1,4 +1,4 @@
 %div
   %p <%= day %>
-  %img{:src => "http://cloud.keepiteasy.net/images/icons/<%= icon%>.gif"}
+  %img{:src => "http://cloud.keepiteasy.net/easy-weather/images/icons/<%= icon%>.gif"}
     %p <%= text %>
