--- a/app/assets/tpl/conditions.haml
+++ b/app/assets/tpl/conditions.haml
@@ -2,7 +2,7 @@
   %article#location For <%= city %>
   %h2 Today
   %section#conditionsMain
-    %img{:src => "http://cloud.keepiteasy.net/images/icons/<%= icon %>.gif"}
+    %img{:src => "http://cloud.keepiteasy.net/easy-weather/images/icons/<%= icon %>.gif"}
       %h3#currentTemp <%= temp %> K
       %span (<%= temp_c %>° C)
   %section#conditionsDetails
