--- a/app/index.haml
+++ b/app/index.haml
@@ -3,29 +3,25 @@
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
     %meta{:content => "width=device-width, initial-scale=1, maximum-scale=1", :name => "viewport"}
-      %title EasyWeather
-      %link{:href => "//cloud.keepiteasy.net/easy-weather/favicon.ico", :rel => "shortcut icon"}
-      %link{:href => "//cloud.keepiteasy.net/easy-weather/css/font-awesome.css", :rel => "stylesheet"}
-      %link{:href => "//cloud.keepiteasy.net/easy-weather/css/fluid.css", :media => "screen", :rel => "stylesheet", :type => "text/css"}
+    %title EasyWeather
+    %link{:href => "//cloud.keepiteasy.net/easy-weather/favicon.ico", :rel => "shortcut icon"}
+    %link{:href => "//cloud.keepiteasy.net/easy-weather/css/font-awesome.css", :rel => "stylesheet"}
+    %link{:href => "//cloud.keepiteasy.net/easy-weather/css/fluid.css", :media => "screen", :rel => "stylesheet", :type => "text/css"}
+
   %body
     %script{:src => "//cloud.keepiteasy.net/easy-weather/libs/modernizr.custom.89661.js", :type => "text/javascript"}
     %script{:src => "//cloud.keepiteasy.net/easy-weather/libs/json2.js", :type => "text/javascript"}
     %script{:src => "//cloud.keepiteasy.net/easy-weather/libs/jquery.js", :type => "text/javascript"}
     %script{:src => "//cloud.keepiteasy.net/easy-weather/libs/underscore-min.js", :type => "text/javascript"}
     %script{:src => "//cloud.keepiteasy.net/easy-weather/libs/backbone-min.js", :type => "text/javascript"}
+
     %script{:src => "//maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=weather", :type => "text/javascript"}
-    %script{:src => "assets/js/init.js", :type => "text/javascript"}
-    %script{:src => "assets/js/router.js", :type => "text/javascript"}
-    %script{:src => "assets/js/models/app.js", :type => "text/javascript"}
-    %script{:src => "assets/js/models/forecast.js", :type => "text/javascript"}
-    %script{:src => "assets/js/models/conditions.js", :type => "text/javascript"}
-    %script{:src => "assets/js/collections/forecast.js", :type => "text/javascript"}
-    %script{:src => "assets/js/collections/conditions.js", :type => "text/javascript"}
-    %script{:src => "assets/js/views/loading.js", :type => "text/javascript"}
-    %script{:src => "assets/js/views/map.js", :type => "text/javascript"}
-    %script{:src => "assets/js/views/conditions.js", :type => "text/javascript"}
-    %script{:src => "assets/js/views/forecast.js", :type => "text/javascript"}
-    %script{:src => "assets/js/views/app.js", :type => "text/javascript"}
+
+    %script{:src => "assets/js/_app.js", :type => "text/javascript"}
+    %script{:src => "assets/js/_models.js", :type => "text/javascript"}
+    %script{:src => "assets/js/_collections.js", :type => "text/javascript"}
+    %script{:src => "assets/js/_views.js", :type => "text/javascript"}
+
     :javascript
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-33924145-1']);
